--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 discord.py
 dnspython==1.16.0
 PyNaCl==1.3.0
-async-timeout==3.0.1
+async-timeout
 psycopg2
 requests
 sigfig
@@ -12,3 +12,4 @@ syllables
 nltk
 inflect
 discord-pretty-help
+pluralkit
